tdf#96461 ODBC SQLBindParameter: correct DecimalDigits for time(date) values

Change-Id: I33c63d2c002d9abcbadb16bcd460996ef3212f4a
Reviewed-on: https://gerrit.libreoffice.org/20684
Reviewed-by: Lionel Elie Mamane <lionel@mamane.lu>
Tested-by: Lionel Elie Mamane <lionel@mamane.lu>